# http-server

./: .gitignore  CMakeLists.txt  README.md
deprecated/: handle_connection.cpp  parse_body_helper.cpp  parse_body_helper.hpp
include/: create_socket.hpp  echo.hpp  files.hpp  flag_parser.hpp  get.hpp  handlers.hpp  header_line_parts.hpp  http_get.hpp  http_request.hpp  parse_body_helper.hpp  request_line.hpp  user_agent.hpp
include/core/: bind_socket.hpp  config.hpp  connection_handler.hpp  create_socket.hpp  handle_connection.hpp  http_types.hpp  parse_body_helper.hpp  request.hpp  request_parser.hpp  server.hpp  socket_setup.hpp  types.hpp
include/core/request/: request.hpp  request_parser.hpp
include/core/response/: apply_encoding.hpp  response.hpp
include/core/sockets/: bind_socket.hpp  create_socket.hpp  socket_setup.hpp
include/get/: get.hpp  get_handler.hpp
include/get/endpoints/: echo.hpp  (+3 more)
include/post/: post_handler.hpp
include/utils/: flag_parser.hpp  get_endpoint.hpp
src/: config.cpp  echo.cpp  files.cpp  get.cpp  http_get.cpp  http_request.cpp  main.cpp  parse_body_helper.cpp  request.cpp  server.cpp  user_agent.cpp
src/core/: CMakeLists.txt  config.cpp  connection_handler.cpp  handle_connection.cpp  parse_body_helper.cpp  request.cpp  request_parser.cpp  server.cpp  socket_setup.cpp
src/core/request/: request.cpp  request_parser.cpp
src/core/response/: apply_encoding.cpp  response.cpp
src/core/sockets/: socket_setup.cpp
src/get/: CMakeLists.txt  get.cpp  get_handler.cpp
src/get/endpoints/: echo.cpp  empty.cpp  files.cpp  user_agent.cpp
src/post/: CMakeLists.txt  post_handler.cpp
src/utils/: CMakeLists.txt  flag_parser.cpp  get_endpoint.cpp
(+2 files in other folders)
